# sprint

./: .gitignore  README.md  getting_started.ipynb  pyproject.toml  tp1.ipynb  tp2_competition.ipynb  tp3_classification.ipynb  tp4_generation.ipynb
agents/: linear_agent.py  random_agent.py
